--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,5 +14,9 @@
    class="ui positive right floated button">
    Submit link
    </button>
-   </form>
+</form>
+
+<div class="ui grid posts"><app-article></app-article></div>
+
+   
 <router-outlet></router-outlet>
